# bot-or-not

./: .gitignore  README.md  config.py  config.yaml  extractor.py  main.py  metadata.py  pyproject.toml  requirements.txt  sampler.py
data_analysis/: sampling_eda.ipynb  twibot22_sampled_eda.ipynb
data_analysis/plots/: graph_summary.tex  summary_stats.tex
dataset/: test_user_nodes.pt
model/: __init__.py  base.py  bot_ergcn.py  bot_rgcn.py  node_embeddings.py
scripts/: dataset.py  db_setup.py  eda.ipynb  embeddings.py  processing.py  sampling.py  train_static_graph.py
src/: config.py  databuilder.py  dataloader.py  embedding_builder.py  extractor.py  processing.py  sampler.py  static_graph_builder.py  static_user_graph.py  train.py
src/features_builder/: builder.py  labels.py  tweets.py
src/features_builder/users/: categorical.py  numeric.py  users.py
src/utils/: cache.py  duck.py  text_embed.py
