[project]
name = "bot-or-not"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.11.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "ijson>=3.4.0.post0",
    "ipykernel>=6.31.0",
    "loguru>=0.7.3",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "scikit-learn>=1.6.1",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

